tests/should_fail/syntax_listcomp_non_list.nv
module main

// SHOULD FAIL: list comprehension over non-list
// parser: "List comprehension must be a list"
let xs = [x | x in 42]
println(xs)
